--- a/html/index.html
+++ b/html/index.html
@@ -3,11 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title></title>
-  <link rel="stylesheet" href="css/style.css"><!-- DO NOT ALTER THIS LINE -->
+  <title>re</title>
+  <link rel="stylesheet" href="../css/style.css" ><!-- DO NOT ALTER THIS LINE -->
 </head>
 <body>
-  All your HTML code must go here, after the <code>body</code> element and before the <code>script</code> element.
-  <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
+  <h1> test </h1>
+  <p>  test </p> 
+  <script src="../js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
 </body>
 </html>
