--- a/html/index.html
+++ b/html/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Rice Recipes</title>
-  <link rel="stylesheet" href="../css/style.css" ><!-- DO NOT ALTER THIS LINE -->
+  <link rel="stylesheet" href="css/style.css" ><!-- DO NOT ALTER THIS LINE -->
   <link href="https://fonts.googleapis.com/css2?family=Domine:wght@400;600&family=Noto+Sans:ital@0;1&display=swap" rel="stylesheet"> 
 </head>
 <body>
@@ -32,6 +32,6 @@
   </div>
 </div>
 
-  <script src="../js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
+  <script src="js/app.js"></script><!-- DO NOT ALTER THIS LINE -->
 </body>
 </html>
